<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/page0"
            android:icon="@drawable/ic_menu_icon"
            android:title="@string/definition" />
        <item
            android:id="@+id/page1"
            android:icon="@drawable/ic_menu_lecture"
            android:title="@string/history" />
        <item
            android:id="@+id/page2"
            android:icon="@drawable/ic_menu_lecture"
            android:title="@string/specifications" />
        <item
            android:id="@+id/page3"
            android:icon="@drawable/ic_menu_lecture"
            android:title="@string/classification" />
    </group>

    <item android:title="@string/read">
        <menu>
            <item
                android:id="@+id/nav_viewSulpak"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/now" />
            <item
                android:id="@+id/nav_viewTechnoDom"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/today" />
            <item
                android:id="@+id/nav_viewFora"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/tomorrow" />
            <item
                android:id="@+id/nav_viewMechta"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/three_days" />
        </menu>

    </item>

</menu>
